<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.feup.apm.co.MainActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="?attr/actionBarTheme" />

  <LinearLayout
      android:id="@+id/inside"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <TextView
        android:id="@+id/title_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_server"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/inputs_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/edt_IP"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_IP_address_autofill_hint"
          android:hint="@string/edt_IP_address_hint"
          android:imeOptions="actionNext"
          android:inputType="phone"
          android:minHeight="48dp"
          android:textSize="12sp" />

      <EditText
          android:id="@+id/edt_Port"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_Port_autofill_hint"
          android:hint="@string/edt_Port_hint"
          android:imeOptions="actionNext"
          android:inputType="numberDecimal"
          android:minHeight="48dp"
          android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_user"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/inputs_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/edt_name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_name_autofill_hint"
          android:hint="@string/edt_name_hint"
          android:imeOptions="actionDone"
          android:inputType="textPersonName"
          android:minHeight="48dp"
          android:textSize="12sp" />

      <EditText
          android:id="@+id/edt_nick"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_nick_autofill_hint"
          android:hint="@string/edt_nick_hint"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:minHeight="48dp"
          android:textSize="12sp" />

      <EditText
          android:id="@+id/edt_pass"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_pass_autofill_hint"
          android:ems="10"
          android:hint="@string/edt_pass_hint"
          android:inputType="textPassword"
          android:minHeight="48dp"
          android:textSize="12sp"
          android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_card"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/inputs_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/edt_number"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_number_autofill_hint"
          android:ems="10"
          android:hint="@string/edt_number_hint"
          android:inputType="numberDecimal"
          android:minHeight="48dp"
          android:textSize="12sp" />

      <EditText
          android:id="@+id/edt_date"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/edt_date_autofill_hint"
          android:ems="10"
          android:hint="@string/edt_date_hint"
          android:inputType="date"
          android:minHeight="48dp"
          android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_start_value" />

  </LinearLayout>

</LinearLayout>
